zarf/k8s/kustomize/base/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machina-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: machina-api
  template:
    metadata:
      name: machina-api
      labels:
        app: machina-api
    spec:
      containers:
      - name: metrics
        image: lgarciaac/machina-metrics:1.0-arm64
        ports:
          - name: metrics
            containerPort: 3001
          - name: metrics-debug
            containerPort: 4001
      - name: machina-api
        image: lgarciaac/machina-api:1.0-arm64
        imagePullPolicy: Always
        ports:
          - name: machina-api
            containerPort: 3000
          - name: api-debug
            containerPort: 4000
        readinessProbe: # readiness probes mark the service available to accept traffic.
          httpGet:
            path: /debug/readiness
            port: api-debug
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 2
        livenessProbe: # liveness probes mark the service alive or dead (to be restarted).
          httpGet:
            path: /debug/liveness
            port: api-debug
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 2
        resources:
          limits:
            memory: "200M"
            cpu: "500m"
          requests:
            memory: "100M"
            cpu: "200m"
