zarf/k8s/kustomize/base/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector: 
    app: machina-api
  type: ClusterIP
  ports:
    - name: api
      port: 80
      targetPort: 3000
    - name: api-debug
      port: 4000
      targetPort: 4000
    - name: metrics
      port: 3001
      targetPort: 3001
    - name: metrics-debug
      port: 4001
      targetPort: 4001
